--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-</head>
+<head></head>
 <body>
-<div id="test"></div>
+<div id='no-react'>Hier ist kein React</div>
+<div id='react'></div>
+<script src='./build/transformed.js'></script>
 </body>
-<script type="text/javascript" src="bundle.js"></script>
 </html>
+
