--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head></head>
 <body>
-<div id='no-react'>Hier ist kein React</div>
+<div id='no-react'>Hier ist kein React!</div>
 <div id='react'></div>
+<div id='react-clock'></div>
 <script src='./build/transformed.js'></script>
 </body>
 </html>
-
